<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">1595 Scouting App</string>

    <string name="settings">Enter MAC Address</string>
    <string name="startScout">Scout new team</string>
    <string name="startPit">Pit scout a team</string>
    <string name="back">◀ Back</string>
    <string name="Cancel">Cancel</string>
    <string name="Submit">Submit</string>

    <string name="teamNumberHeader">Enter team number to scout: </string>
    <string name="warning">You will need to pair this device to the laptop/server that is going to be receiving the data first!</string>
    <string name="macAddr">MAC Address of server:</string>


    <string name="teamToScout">Team to scout: </string>
    <string name="autoHeaderText">Autonomous</string>
    <string name="hasAuto">This team has an auto\n(Can cross baseline)</string>
    <string name="autoBalance">Team can place a cube on switch</string>
    <string name="autoScale">Team can place cube on scale</string>
    <string name="teleHeaderText">TeleOp</string>
    <string name="teleSwitch">Number of cubes placed on switch</string>
    <string name="teleScale">Number of cubes placed on scale</string>
    <string name="teleExchange">Number of cubes placed in exchange</string>

    <string name="climbHeader">Climbing</string>
    <string name="didntClimb" tools:ignore="Typos">This bot didnt cause any other bots to climb/failed to climb</string>
    <string name="oneClimb" tools:ignore="Typos">This bot caused one bot to climb</string>
    <string name="twoClimb">This bot caused two bots to climb</string>
    <string name="threeClimb">This team climbed, and lifted two other bots</string>

    <string name="connecting">Connecting to Server</string>
    <string name="datapending">Sending data over bluetooth</string>

    <string name="commentHeader">Additional comments (Optional)</string>
    
    <string name="pitScoutTeamNumber">Team number:</string>
    <string name="pitScoutTeamName">Team name (Optional):</string>
    <string name="pitScoutDTConfigHeader">Drive train configuration</string>
    <string name="DTConfig_Standard">Tank drive/west coast (Standard)</string>
    <string name="DTConfig_Mecanum">Mecanum</string>
    <string name="DTConfig_Swerve">Swerve</string>
    <string name="DTConfig_Holonomic">Holonimic</string>
    <string name="DTConfig_Slide">Slide or H-Drive</string>
    <string name="DTConfig_Butterfly">Butterfly</string>
    <string name="DTConfig_Grasshopper">Grasshopper</string>
    <string name="DTConfig_Kiwi">Kiwi</string>
    <string name="DTConfig_Nonadrive">Nonadrive/Butterslide</string>
    <string name="DTConfig_Octocanum">Octocanum</string>
    <string name="DTConfig_Other">Other</string>
    <string name="WheelsizeHeader">Wheel size (Inches)</string>
    <string name="WheelspacingHeader">Wheel spacing (Inches)</string>
    <string name="GroundClearanceHeader">Ground clearance (Inches)</string>
    <string name="pitScoutingNoAuto">No Auto</string>
    <string name="pitScoutingBasicAuto">Can cross baseline</string>
    <string name="pitScoutingSwitchAuto">Can place cube on switch</string>
    <string name="pitScoutingScaleAuto">Can place cube on scale</string>
    <string name="pitScoutingNoTele">No teleOp</string>
    <string name="pitScoutingSwitchTele">Can place cube on switch</string>
    <string name="pitScoutingScaleTele">Can place cube on scale</string>
    <string name="pitScoutingClimberHeader">Type of climber</string>
    <string name="rampClimb">Ramp climber (Dont climb themselves)</string>
    <string name="TrippleClimb">Triple climber (Can hoist both robots and climb themselves)</string>
    <string name="DoubleClimb">Double climber (Can hoist one other robot, and climb themselves)</string>
    <string name="shareClimb">Sharing is caring :)      (Leaves room on the bar for other bots</string>
    <string name="onlyClimb">Only them (Leaves no room for other bots)</string>
    <string name="noClimb">No climber :(</string>
    <string name="otherClimb">Other kind of climber</string>

</resources>
